# NekoFunction

./: .nekorelease.json  CMakeLists.txt  README.md
.github/workflows/: ci.yml  conan.yml  vcpkg.yml
cmake/: NekoFunctionConfig.cmake.in
include/neko/function/: archive.hpp  archiver.hpp  detectFileType.hpp  hash.hpp  neko.function.archive.cppm  neko.function.cppm  pattern.hpp  utilities.hpp  uuid.hpp
src/neko/function/: archiveZip.cpp  archiverZip.cpp
tests/: NekoFunction_test.cpp  function_module_test.cpp  function_test.cpp
tests/conan/: CMakeLists.txt  conanfile.txt  test.cpp
tests/vcpkg/: CMakeLists.txt  test.cpp
